--- a/scripts/views/helpTemplate.ejs
+++ b/scripts/views/helpTemplate.ejs
@@ -1,7 +1,9 @@
 
 Hi! I'm CruntBot.
-I'm exist soley to help you find a place to eat.
+I'm exist solely to help you find a place to eat.
 
 You can interact with me directly in the following ways:
 
-> @crunchbot I want <food>
+> @crunchbot im hungry for <food>
+
+> @crunchbot im poor and hungry for <food>
