port change for rails to support react, changed database structure and began working with react

--- a/bot_frontend/src/index.css
+++ b/bot_frontend/src/index.css
@@ -3,3 +3,29 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.header-container{
+	background-color: blue;
+	position: absolute;
+	top: 0px;
+	width: 100vw;
+	height: 50px;
+}
+
+.display-container{
+	background-color: red;
+	position: relative;
+	width: 80vw;
+	height: 70vh;
+	margin: 0 auto;
+	margin-top: 110px;
+
+}
+
+.footer-container{
+	background-color: green;
+	position: absolute;
+	bottom: 0px;
+	width: 100vw;
+	height: 50px;
+}
